<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:key="@string/setting_notification_enable_key"
        android:title="@string/setting_notification_enable_title"
        android:summary="@string/setting_notification_enable_summary"
        android:defaultValue="true"/>

    <SwitchPreference
        android:key="@string/setting_touch_feedback_key"
        android:title="@string/setting_touch_feedback_title"
        android:summary="@string/setting_touch_feedback_summary"
        android:defaultValue="true"/>

    <Preference
        android:key="@string/setting_delete_all_habits_key"
        android:title="@string/setting_delete_all_habits_title"
        android:summary="@string/setting_delete_all_habits_summary"/>

</PreferenceScreen>