<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.Toolbar
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="@dimen/toolbarHeight"
    style="@style/NavigationElementStyle">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/toolbarTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAppearance="@style/TitleText"
        android:visibility="gone"


        android:layout_gravity="center"/>

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/deleteButton"
        android:layout_width="@dimen/toolbarButtonSize"
        android:layout_height="@dimen/toolbarButtonSize"
        android:contentDescription="@string/delete_habit"

        android:background="?selectableItemBackgroundBorderless"
        android:src="@drawable/ic_delete"
        android:layout_gravity="end"/>

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/editButton"
        android:layout_width="@dimen/toolbarButtonSize"
        android:layout_height="@dimen/toolbarButtonSize"
        android:contentDescription="@string/edit_habit"

        android:background="?selectableItemBackgroundBorderless"
        android:src="@drawable/ic_edit"
        android:layout_gravity="end"/>

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/settingsButton"
        android:layout_width="@dimen/toolbarButtonSize"
        android:layout_height="@dimen/toolbarButtonSize"
        android:contentDescription="@string/settings"

        android:background="?selectableItemBackgroundBorderless"
        android:src="@drawable/ic_settings"
        android:layout_gravity="end"/>

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/addHabitButton"
        android:layout_width="@dimen/toolbarButtonSize"
        android:layout_height="@dimen/toolbarButtonSize"
        android:contentDescription="@string/create_habit"

        android:background="?selectableItemBackgroundBorderless"
        android:src="@drawable/ic_add"
        android:layout_gravity="end"/>
</androidx.appcompat.widget.Toolbar>