<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout"
    android:background="@color/colorPrimaryBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbarHeight"
        style="@style/NavigationElementStyle"

        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/toolbarTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAppearance="@style/TitleText"
            android:visibility="gone"

            android:layout_gravity="center"/>

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/settingsButton"
            android:layout_width="@dimen/toolbarButtonSize"
            android:layout_height="@dimen/toolbarButtonSize"
            android:contentDescription="@string/settings"

            android:background="?selectableItemBackgroundBorderless"
            android:src="@drawable/ic_settings"
            android:layout_gravity="end"/>

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/addHabitButton"
            android:layout_width="@dimen/toolbarButtonSize"
            android:layout_height="@dimen/toolbarButtonSize"
            android:contentDescription="@string/create_habit"

            android:background="?selectableItemBackgroundBorderless"
            android:src="@drawable/ic_add"
            android:layout_gravity="end"/>
    </androidx.appcompat.widget.Toolbar>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"

        android:name="androidx.navigation.fragment.NavHostFragment"
        app:defaultNavHost="true"
        app:navGraph="@navigation/navigation_graph"

        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toTopOf="@id/bottomNavigation"/>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigation"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottomNavigationHeight"
        app:menu="@menu/menu_bottom_navigation"
        style="@style/NavigationElementStyle"

        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>